tests/neg/i9185.check
-- [E008] Not Found Error: tests/neg/i9185.scala:7:21 ------------------------------------------------------------------
7 |  val value2 = "ola".pure  // error
  |               ^^^^^^^^^^
  |value pure is not a member of String.
  |An extension method was tried, but could not be fully constructed:
  |
  |    M.extension_pure[A, F]("ola")(
  |      /* ambiguous: both object listMonad in object M and object optionMonad in object M match type M[F] */summon[M[F]]
  |    )
-- Error: tests/neg/i9185.scala:8:38 -----------------------------------------------------------------------------------
8 |  val value3 = M.extension_pure("ola") // error
  |                                      ^
  |ambiguous implicit arguments: both object listMonad in object M and object optionMonad in object M match type M[F] of parameter m of method extension_pure in object M
-- [E008] Not Found Error: tests/neg/i9185.scala:11:16 -----------------------------------------------------------------
11 |  val l = "abc".len  // error
   |          ^^^^^^^^^
   |          value len is not a member of String.
   |          An extension method was tried, but could not be fully constructed:
   |
   |              M.extension_len("abc")
